changing namespace of mms active resource models and adding pictures model

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,7 +2,7 @@
 en:
     activeresource:
         models:
-            medium:
+            mms_integration/medium:
                 one: 'resource'
                 other: 'resources'
         attributes:
