--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -5,6 +5,9 @@ en:
             mms_integration/medium:
                 one: 'resource'
                 other: 'resources'
+            mms_integration/picture:
+                one: 'picture'
+                other: 'pictures'
         attributes:
             medium:
                 id: 'Resource #'
