--- a/config/locales/bo.yml
+++ b/config/locales/bo.yml
@@ -7,7 +7,7 @@ bo:
                 other: 'ཡི་གེ་ཁག'
             mms_integration/medium:
                 one: 'ཐོན་ཁུངས།'
-                other: 'ཐོན་ཁུངས་ཁག་'
+                other: 'ཐོན་ཁུངས་ཁག'
             mms_integration/picture:
                 one: 'picture'
                 other: 'pictures'
