adding paginated support to api calls

--- a/config/locales/bo.yml
+++ b/config/locales/bo.yml
@@ -11,6 +11,9 @@ bo:
             mms_integration/picture:
                 one: 'picture'
                 other: 'pictures'
+            mms_integration/video:
+                one: 'video'
+                other: 'videos'
         attributes:
             medium:
                 id: 'ཐོན་ཁུངས་ད#'
