--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -11,6 +11,9 @@ en:
             mms_integration/picture:
                 one: 'picture'
                 other: 'pictures'
+            mms_integration/video:
+                one: 'video'
+                other: 'videos'
         attributes:
             medium:
                 id: 'Resource #'
