updating to rails 6.1

--- a/config/locales/bo.yml
+++ b/config/locales/bo.yml
@@ -9,8 +9,8 @@ bo:
                 one: 'ཐོན་ཁུངས།'
                 other: 'ཐོན་ཁུངས་ཁག'
             mms_integration/picture:
-                one: 'picture'
-                other: 'pictures'
+                one: 'mms image'
+                other: 'mms images'
             mms_integration/video:
                 one: 'video'
                 other: 'videos'
