--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -9,8 +9,8 @@ zh:
                 one: '资源'
                 other: '资源 '
             mms_integration/picture:
-                one: 'picture'
-                other: 'pictures'
+                one: 'mms image'
+                other: 'mms images'
             mms_integration/video:
                 one: 'video'
                 other: 'videos'
